ユーザー新規登録、ログイン

--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -2,6 +2,8 @@ ja:
   activerecord:
     attributes:
       user:
+        introduction: 紹介文
+        area: 活動地域
         image: 写真
         name: 名前
         confirmation_sent_at: パスワード確認送信時刻
